<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/todoListFragment"
            android:icon="@drawable/ic_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/todoSearchFragment"
            android:icon="@drawable/ic_search_24"
            android:title="@string/search_btn" />
        <item
            android:id="@+id/postListFragment"
            android:icon="@drawable/ic_notes_24"
            android:title="@string/posts" />
        <item
            android:id="@+id/loginFragment"
            android:icon="@drawable/ic_add_24"
            android:title="@string/login" />

        <!-- auth invisible item -->

        <item
            android:id="@+id/logout"
            android:visible="false"
            android:icon="@drawable/ic_logout_24"
            android:title="@string/logout"/>
    </group>
</menu>